--- a/ci-operator/jobs/openshift/jenkins/openshift-jenkins-openshift-3.11-presubmits.yaml
+++ b/ci-operator/jobs/openshift/jenkins/openshift-jenkins-openshift-3.11-presubmits.yaml
@@ -15,6 +15,8 @@ presubmits:
         - --branch=openshift-3.11
         - --give-pr-author-access-to-namespace=true
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --kubeconfig=/etc/apici/kubeconfig
         - --kubeconfig=/etc/apici/kubeconfig
         - --org=openshift
         - --repo=jenkins
@@ -50,6 +52,9 @@ presubmits:
         - mountPath: /etc/apici
           name: apici-ci-operator-credentials
           readOnly: true
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /usr/local/e2e-gcp-cluster-profile
           name: cluster-profile
         - mountPath: /usr/local/e2e-gcp
@@ -58,8 +63,17 @@ presubmits:
         - mountPath: /etc/pull-secret
           name: pull-secret
           readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: apici-ci-operator-credentials
         secret:
           items:
@@ -76,6 +90,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e-openshift-jenkins
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
       - name: pull-secret
         secret:
           secretName: regcred
