--- a/ci-operator/jobs/openshift/verification-tests/openshift-verification-tests-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/verification-tests/openshift-verification-tests-master-periodics.yaml
@@ -9,7 +9,11 @@ periodics:
       - --artifact-dir=$(ARTIFACTS)
       - --git-ref=openshift/verification-tests@master
       - --give-pr-author-access-to-namespace=true
-      - --lease-server=http://boskos
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --kubeconfig=/etc/apici/kubeconfig
+      - --lease-server-password-file=/etc/boskos/password
+      - --lease-server-username=ci
+      - --lease-server=https://boskos-ci.svc.ci.openshift.org
       - --secret-dir=/usr/local/test-e2e-cluster-profile
       - --target=test-e2e
       - --template=/usr/local/test-e2e
@@ -43,13 +47,34 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
+      - mountPath: /etc/apici
+        name: apici-ci-operator-credentials
+        readOnly: true
+      - mountPath: /etc/boskos
+        name: boskos
+        readOnly: true
       - mountPath: /usr/local/test-e2e-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/test-e2e
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
     serviceAccountName: ci-operator
     volumes:
+    - name: apici-ci-operator-credentials
+      secret:
+        items:
+        - key: sa.ci-operator.apici.config
+          path: kubeconfig
+        secretName: apici-ci-operator-credentials
+    - name: boskos
+      secret:
+        items:
+        - key: password
+          path: password
+        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -58,3 +83,6 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-src
       name: job-definition
+    - name: pull-secret
+      secret:
+        secretName: regcred
