--- a/ci-operator/jobs/openshift/descheduler/openshift-descheduler-release-3.10-presubmits.yaml
+++ b/ci-operator/jobs/openshift/descheduler/openshift-descheduler-release-3.10-presubmits.yaml
@@ -50,6 +50,12 @@ presubmits:
           subPath: cluster-launch-src.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: cluster-profile
         projected:
           sources:
@@ -60,6 +66,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-src
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: (?m)^/test( | .* )e2e,?($|\s.*)
   - agent: kubernetes
     always_run: true
