--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-periodics.yaml
@@ -13,6 +13,8 @@ periodics:
       - --artifact-dir=$(ARTIFACTS)
       - --branch=release-4.3
       - --give-pr-author-access-to-namespace=true
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --kubeconfig=/etc/apici/kubeconfig
       - --org=openshift
       - --repo=hypershift-toolkit
       - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
@@ -34,17 +36,32 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
+      - mountPath: /etc/apici
+        name: apici-ci-operator-credentials
+        readOnly: true
       - mountPath: /usr/ibm-gate-test-secrets/
         name: ibm-gate-test-secrets
+        readOnly: true
+      - mountPath: /etc/pull-secret
+        name: pull-secret
         readOnly: true
       - mountPath: /etc/sentry-dsn
         name: sentry-dsn
         readOnly: true
     serviceAccountName: ci-operator
     volumes:
+    - name: apici-ci-operator-credentials
+      secret:
+        items:
+        - key: sa.ci-operator.apici.config
+          path: kubeconfig
+        secretName: apici-ci-operator-credentials
     - name: ibm-gate-test-secrets
       secret:
         secretName: ibm-gate-test-secrets
+    - name: pull-secret
+      secret:
+        secretName: regcred
     - name: sentry-dsn
       secret:
         secretName: sentry-dsn
