--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.2-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.2-presubmits.yaml
@@ -706,6 +706,8 @@ presubmits:
         - --branch=release-4.2
         - --give-pr-author-access-to-namespace=true
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --kubeconfig=/etc/apici/kubeconfig
         - --kubeconfig=/etc/apici/kubeconfig
         - --org=openshift
         - --repo=installer
@@ -737,6 +739,9 @@ presubmits:
         - mountPath: /etc/apici
           name: apici-ci-operator-credentials
           readOnly: true
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /usr/local/e2e-metal-cluster-profile
           name: cluster-profile
         - mountPath: /usr/local/e2e-metal
@@ -745,8 +750,17 @@ presubmits:
         - mountPath: /etc/pull-secret
           name: pull-secret
           readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: apici-ci-operator-credentials
         secret:
           items:
@@ -761,6 +775,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-installer-metal-e2e
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
       - name: pull-secret
         secret:
           secretName: regcred
@@ -786,6 +803,8 @@ presubmits:
         - --branch=release-4.2
         - --give-pr-author-access-to-namespace=true
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --kubeconfig=/etc/apici/kubeconfig
         - --kubeconfig=/etc/apici/kubeconfig
         - --lease-server-password-file=/etc/boskos/password
         - --lease-server-username=ci
@@ -822,6 +841,9 @@ presubmits:
         - mountPath: /etc/apici
           name: apici-ci-operator-credentials
           readOnly: true
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /etc/boskos
           name: boskos
           readOnly: true
@@ -833,8 +855,17 @@ presubmits:
         - mountPath: /etc/pull-secret
           name: pull-secret
           readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: apici-ci-operator-credentials
         secret:
           items:
@@ -855,6 +886,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-installer-openstack-e2e
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
       - name: pull-secret
         secret:
           secretName: regcred
@@ -879,6 +913,8 @@ presubmits:
         - --branch=release-4.2
         - --give-pr-author-access-to-namespace=true
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --kubeconfig=/etc/apici/kubeconfig
         - --kubeconfig=/etc/apici/kubeconfig
         - --lease-server-password-file=/etc/boskos/password
         - --lease-server-username=ci
@@ -915,6 +951,9 @@ presubmits:
         - mountPath: /etc/apici
           name: apici-ci-operator-credentials
           readOnly: true
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /etc/boskos
           name: boskos
           readOnly: true
@@ -926,8 +965,17 @@ presubmits:
         - mountPath: /etc/pull-secret
           name: pull-secret
           readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: apici-ci-operator-credentials
         secret:
           items:
@@ -948,6 +996,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-installer-openstack-e2e
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
       - name: pull-secret
         secret:
           secretName: regcred
