--- a/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.10-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.10-presubmits.yaml
@@ -61,6 +61,12 @@ presubmits:
           subPath: cluster-launch-e2e-upgrade.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: e2e-gcp-major-upgrade-310
         projected:
           sources:
@@ -71,6 +77,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e-upgrade
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: (?m)^/test( | .* )gcp-major-upgrade,?($|\s.*)
   - agent: kubernetes
     always_run: true
@@ -121,6 +130,12 @@ presubmits:
           subPath: cluster-launch-e2e.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: cluster-profile
         projected:
           sources:
@@ -131,6 +146,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: (?m)^/test( | .* )gcp,?($|\s.*)
   - agent: kubernetes
     always_run: false
@@ -183,6 +201,12 @@ presubmits:
           subPath: cluster-launch-e2e-openshift-ansible.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: cluster-profile
         projected:
           sources:
@@ -193,6 +217,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e-openshift-ansible
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: (?m)^/test( | .* )e2e-atomic,?($|\s.*)
   - agent: kubernetes
     always_run: true
@@ -244,6 +271,12 @@ presubmits:
           subPath: cluster-launch-e2e-openshift-ansible.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: cluster-profile
         projected:
           sources:
@@ -254,6 +287,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e-openshift-ansible
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: (?m)^/test( | .* )e2e-aws,?($|\s.*)
   - agent: kubernetes
     always_run: false
@@ -311,6 +347,12 @@ presubmits:
           subPath: cluster-launch-e2e-openshift-ansible.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: cluster-profile
         projected:
           sources:
@@ -321,6 +363,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e-openshift-ansible
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: ((?m)^/test( all| e2e-gluster),?(\s+|$))
   - agent: kubernetes
     always_run: true
