--- a/ci-operator/jobs/openshift/origin-web-console-server/openshift-origin-web-console-server-release-3.10-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin-web-console-server/openshift-origin-web-console-server-release-3.10-presubmits.yaml
@@ -179,6 +179,12 @@ presubmits:
           subPath: cluster-launch-e2e.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: cluster-profile
         projected:
           sources:
@@ -189,4 +195,7 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: (?m)^/test( | .* )e2e,?($|\s.*)
