--- a/ci-operator/jobs/openshift/origin/openshift-origin-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-master-periodics.yaml
@@ -27,7 +27,11 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --lease-server=http://boskos
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --kubeconfig=/etc/apici/kubeconfig
+      - --lease-server-password-file=/etc/boskos/password
+      - --lease-server-username=ci
+      - --lease-server=https://boskos-ci.svc.ci.openshift.org
       - --secret-dir=/usr/local/e2e-conformance-k8s-cluster-profile
       - --target=e2e-conformance-k8s
       - --template=/usr/local/e2e-conformance-k8s
@@ -52,13 +56,34 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
+      - mountPath: /etc/apici
+        name: apici-ci-operator-credentials
+        readOnly: true
+      - mountPath: /etc/boskos
+        name: boskos
+        readOnly: true
       - mountPath: /usr/local/e2e-conformance-k8s-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-conformance-k8s
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
     serviceAccountName: ci-operator
     volumes:
+    - name: apici-ci-operator-credentials
+      secret:
+        items:
+        - key: sa.ci-operator.apici.config
+          path: kubeconfig
+        secretName: apici-ci-operator-credentials
+    - name: boskos
+      secret:
+        items:
+        - key: password
+          path: password
+        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -67,6 +92,9 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-src
       name: job-definition
+    - name: pull-secret
+      secret:
+        secretName: regcred
 - agent: jenkins
   interval: 24h
   labels:
